# Emerald

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  linux_gen_projects.sh  premake5.lua  win_gen_projects.bat
.github/workflows/: main.yml
premake/: premake5.lua
scripts/: linux_gen_projects.sh  macos_gen_projects.sh  win_gen_projects.bat
src/emerald/: premake5.lua
src/emerald/core/: Application.cpp  Application.h  Base.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  PlatformDetection.h  Timestep.h  Window.cpp  Window.h  empch.cpp  empch.h
src/emerald/debug/: Instrumentor.h
src/emerald/engine/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  Window.h  empch.h
src/emerald/events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
src/emerald/imgui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
src/emerald/include/: Emerald.h
src/emerald/input/: Input.cpp  Input.h  KeyCodes.h  MouseCodes.h
src/emerald/renderer/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.cpp  GraphicsContext.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  SubTexture2D.cpp  SubTexture2D.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
src/emerald/scene/: Components.h  Entity.h  Scene.cpp  Scene.h
src/emeraldEditor/: premake5.lua
src/emeraldEditor/src/: EditorLayer.cpp  EditorLayer.h  EmeraldApp.cpp  EmeraldEditor.cpp
src/game/src/: EmeraldApp.cpp
src/sandbox/: Sandbox.cpp  Sandbox2D.cpp  Sandbox2D.h  premake5.lua
src/sandbox/src/: GameLayer.cpp  GameLayer.h  Level.cpp  Level.h  Player.cpp  (+4 more)
(+33 files in other folders)
